@@ -1,7 +1,7 @@
-/*  Copyright (C) 2003-2011 JabRef contributors.
-    This program is free software; you can redistribute it and/or modify
+/*  Copyright (C) 2013 JabRef contributors.
+    This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
+    the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
     This program is distributed in the hope that it will be useful,
@@ -9,9 +9,8 @@
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License along
-    with this program; if not, write to the Free Software Foundation, Inc.,
-    51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 package net.sf.jabref;
 
@@ -45,7 +44,7 @@ public class NetworkTab extends JPanel implements PrefsTab {
         
 		setLayout(new BorderLayout());
 
-        useProxy = new JCheckBox(Globals.lang("Whether to use a proxy"));
+        useProxy = new JCheckBox(Globals.lang("Use custom proxy configuration"));
 
         defProxyHostname = new JTextField();
 		defProxyHostname.setEnabled(false);
@@ -113,18 +112,32 @@ public class NetworkTab extends JPanel implements PrefsTab {
     }
 
     public boolean readyToClose() {
-        try {
-            // Test if date format is legal:
-            //new FormatSimpleDateFormat(timeStampFormat.getText());
-
-        } catch (IllegalArgumentException ex2) {
+    	boolean validSetting;
+    	if (useProxy.isSelected()) {
+    		String host = defProxyHostname.getText();
+    		String port = defProxyPort.getText();
+    		if ((host == null) || (host.trim().equals("")) ||
+    			(port == null) || (port.trim().equals(""))) {
+    			validSetting = false;
+    		} else {
+    			Integer p;
+    			try {
+    				p = Integer.parseInt(port);
+        			validSetting = (p > 0);
+    			} catch (NumberFormatException e) {
+    				validSetting = false;
+    			}
+    		}
+    	} else {
+			validSetting = true;
+    	}
+    	if (!validSetting) {
             JOptionPane.showMessageDialog
-                    (null, Globals.lang("The chosen date format for new entries is not valid"),
-                            Globals.lang("Invalid date format"),
+                    (null, Globals.lang("Please specify both hostname and port"),
+                            Globals.lang("Invalid setting"),
                             JOptionPane.ERROR_MESSAGE);
-            return false;
         }
-        return true;
+    	return validSetting;
     }
 
 	public String getTabName() {
